# rust-effects

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: basic_typeclasses.rs  future_traverse.rs  future_typeclasses.rs  hkt-like.rs  io_example_jis  io_monad.rs  typeclass_power.rs
rust-typeclasses/: Cargo.toml
rust-typeclasses-future/: Cargo.toml
rust-typeclasses-future/src/: future.rs  lib.rs
rust-typeclasses/src/: future.rs  lib.rs  option.rs  result.rs  vec.rs
rust-typeclasses/src/typeclasses/: applicative.rs  functor.rs  mod.rs  monad.rs  monoid.rs  product.rs  semigroup.rs  traverse.rs
src/: applicative.rs  applicative_functor.rs  free_monad.rs  functor.rs  future.rs  futureresult.rs  lib.rs  macros.rs  monad.rs  monoid.rs  option.rs  result.rs  semigroup.rs  vec.rs
src/effects/: io.rs  ioresult.rs
src/effects_typeclasses/: mod.rs  sync.rs  synct.rs
src/typeclasses/: applicative.rs  applicative_functor.rs  foldable.rs  free.rs  functor.rs  mod.rs  monad.rs  monaderror.rs  monoid.rs  product.rs  semigroup.rs  suspended.rs  synct.rs  traverse.rs
src/typeclasses/free_effect/: effect_list.rs  free.rs  free_bind.rs  free_map.rs  identity.rs  mod.rs
src/types/: cfuture.rs  mod.rs  option.rs  result.rs  vec.rs
