[package]
name = "rust-effects"
version = "0.1.0"
authors = ["Michael Micucci <michael.micucci@exchange.co.jp>"]
edition = "2018"

[[examples]]
name = "basic_typeclasses"

[workspace]
members = ["rust-typeclasses", "rust-typeclasses-future"]

[dependencies]
rust-typeclasses = {path="rust-typeclasses"}
rust-typeclasses-future = {path="rust-typeclasses-future"}
