[package]
name = "rust-effects"
version = "0.1.0"
authors = ["Michael Micucci <michael.micucci@exchange.co.jp>"]
edition = "2018"

[[examples]]
name = "basic_typeclasses"

[[examples]]
name = "future_typeclasses"

[[examples]]
name = "future_traverse"

[[examples]]
name = "typeclass_power"

[workspace]
members = ["rust-typeclasses"]

[dependencies]
rust-typeclasses = {path="rust-typeclasses"}

[dev-dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
