[package]
name = "rust-effects"
version = "0.1.0"
authors = ["Michael Micucci <michael.micucci@exchange.co.jp>"]
edition = "2018"

[[examples]]
name = "basic_typeclasses"

[[examples]]
name = "future_typeclasses"

[[examples]]
name = "future_traverse"

[[examples]]
name = "typeclass_power"

[dependencies]
futures-preview = { version = "0.3.0-alpha.19" }

[dev-dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
