[package]
name = "rust-typeclasses-future"
version = "0.1.0"
authors = ["Michael Micucci <michael.micucci@exchange.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-typeclasses = { path = "../rust-typeclasses" }
futures-preview = { version = "0.3.0-alpha.19" }
